# SendMoods

./: .gitignore  Cargo.toml  README.md  flake.nix  index.html  tauri.nix
receiver/: Cargo.toml
receiver/src/: main.rs  parser.rs
sender/: Cargo.toml
sender-eframe/: Cargo.toml
sender/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs  receiver.rs  sender.rs
