[package]
name = "SendMoods"
version = "0.1.0"
edition = "2024"


resolver = "2"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
console_error_panic_hook = "0.1.7"
fast_qr = { version = "0.13.0", features = ["svg"] }
web-sys = { version = "0.3.77", features = ["Window", "Document", "File", "FileList", "DataTransfer"] }
#wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.100"

#[profile.release]
#opt-level = 3
#overflow-checks = false
#debug-assertions = false
#lto = true
#debug = false
#panic = "abort"