[package]
name = "receiver"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "6.0.0"
tmi = "0.9.0"
anyhow = "1.0.97"
tokio = { version = "1.44.1", features = ["full"] }
winnow = "0.7.4"
shared = {  package = "shared", path = "../shared" }
iroh-blobs = { version = "0.34.0", features = ["net_protocol"]}
dotenv = "0.15.0"
